# Orca

./: .gitignore  README-ZH.md  README.md  build.gradle.kts  maven  maven.gradle.kts  settings.gradle.kts
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/test/: AndroidViewModel.kt  MainActivity.kt  (+2 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
core/: CMakeLists.txt
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: core-client.cpp  core-enviroment.cpp
core/src/main/cpp/include/: core-client.h  core_util.h
gradle/wrapper/: gradle-wrapper.properties
orca-annotation/: build.gradle.kts
orca-annotation/src/main/: AndroidManifest.xml
orca-compiler/: build.gradle.kts
orca-compiler/src/main/: AndroidManifest.xml
orca-core/: CMakeLists.txt  build.gradle
orca-core/src/main/cpp/: core-client.cpp  core-encryption.cpp  core-enviroment.cpp  core-environment.cpp
orca-core/src/main/cpp/include/: core-client.h  core-encryption.h  core-enviroment.h  core-environment.h  core_util.h
orca-core/src/main/java/com/occ/encrypt/: AESEncryption.kt
orca-core/src/main/java/com/occ/encrypt/aes/: AESEncryption.kt
orca-core/src/main/java/com/occ/encrypt/des/: DESEncryption.kt
orca-encrypt/src/main/: AndroidManifest.xml
orca-plugin/: build.gradle.kts
plugin/: build.gradle.kts
plugin/src/main/: AndroidManifest.xml
test/: build.gradle
test/src/main/: AndroidManifest.xml
testLib/: build.gradle
testLib/src/main/: AndroidManifest.xml
test_library/: build.gradle.kts
(+33 files in other folders)
